# Interlabs-proyectoFinal

./: .gitignore  CMakeLists.txt  build.py  build_capture.py  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3  sdkconfig.esp32dev
components/w5500/: idf_component.yml
components/w5500/include/: esp_eth_mac_w5500.h
data/: logo_bytes.txt
docs/: MQTT_BROKER_VIABILITY_STUDY.md  MQTT_COMMANDS.md  TESTING_MQTT_COMMANDS.md
src/: CMakeLists.txt  DataPipeline.cpp  DataPipeline.h  UartCapture.cpp  UartCapture.h  main.cpp
src/config/: AppConfig.h  ConfigManager.cpp  ConfigManager.h
src/mqtt/: MqttClient.cpp  MqttClient.h  MqttManager.cpp  MqttManager.h
src/network/: INetworkInterface.h  NetworkTypes.h
src/network/ethernet/: EthernetW5500.cpp  EthernetW5500.h
src/network/wifi/: WifiInterface.cpp  WifiInterface.h
src/pipeline/: DataPipeline.cpp  DataPipeline.h
src/storage/: FlashRing.cpp  FlashRing.h
src/transport/: IDataSource.h  TransportTypes.h
src/transport/parallel/: ParallelPortCapture.cpp  ParallelPortCapture.h
src/transport/uart/: UartCapture.cpp  UartCapture.h
src/utils/: ButtonMonitor.cpp  ButtonMonitor.h  CommandSystem.cpp  CommandSystem.h  LedManager.cpp  LedManager.h  LogFormatter.h  MqttCommandHandler.cpp  MqttCommandHandler.h
src/webserver/: WebServer.cpp  WebServer.h  logo_data.h
test/: README_MQTT_TEST.md  diagnose_mqtt.py  example_minimal_mqtt.py  get_device_id.py  stress_test.py  test.py  test_burst.py  test_debug_mqtt.py  test_mqtt_command.py
