idf_component_register(
    SRCS 
        "main.cpp"
        "config/ConfigManager.cpp"
        "pipeline/DataPipeline.cpp"
        "storage/FlashRing.cpp"
        "transport/uart/UartCapture.cpp"
        "transport/parallel/ParallelPortCapture.cpp"
    INCLUDE_DIRS 
        "."
        "pipeline"
        "storage"
        "transport"
        "transport/uart"
        "transport/parallel"
        "config"
        "utils"
)
