idf_component_register(
    SRCS 
        "main.cpp"
        "config/ConfigManager.cpp"
        "pipeline/DataPipeline.cpp"
        "storage/FlashRing.cpp"
        "transport/uart/UartCapture.cpp"
        "transport/parallel/ParallelPortCapture.cpp"
        "network/ethernet/EthernetW5500.cpp"
        "network/wifi/WifiInterface.cpp"
        "webserver/WebServer.cpp"
        "utils/CommandSystem.cpp"
        "utils/ButtonMonitor.cpp"
        "utils/LedManager.cpp"
    INCLUDE_DIRS 
        "."
        "pipeline"
        "storage"
        "transport"
        "transport/uart"
        "transport/parallel"
        "network"
        "network/ethernet"
        "network/wifi"
        "webserver"
        "config"
        "utils"
    REQUIRES
        w5500
)
